--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sherlyeka.materibhsindonesiasmp">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MateriBhsIndonesiaSMP">
-        <activity android:name=".RegistrasiActivity"></activity>
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".RegistrasiActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".HomepageActivity">
             <intent-filter>
