--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sherlyeka.materibhsindonesiasmp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MateriBhsIndonesiaSMP">
-        <activity android:name=".ProfileActivity" />
+        <activity android:name=".UserActivity"></activity>
         <activity android:name=".RegistrasiActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".HomepageActivity">
