--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MateriBhsIndonesiaSMP">
+        <activity android:name=".NavigationDrawerActivity"></activity>
+        <activity android:name=".RecylerviewActivity" />
         <activity
             android:name=".HalamanUserActivity"
             android:label="@string/title_activity_halaman_user"
-            android:theme="@style/Theme.MateriBhsIndonesiaSMP.NoActionBar"></activity>
+            android:theme="@style/Theme.MateriBhsIndonesiaSMP.NoActionBar" />
         <activity android:name=".UserActivity" />
         <activity android:name=".RegistrasiActivity" />
         <activity android:name=".LoginActivity" />
